# deskbreeze

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  vcpkg.json
app/: .gitignore  CMakeLists.txt  common_defs.hpp  embedded_assets.cpp  http_server.cpp  http_server.hpp  incbin_common.h  main.cpp  own_server.cpp  own_server.hpp  webview_gtk.hpp  webview_windows.hpp
app/engine/: http_server.cpp  http_server.hpp  ipc_handler.hpp  webview_cocoa.hpp  webview_gtk.hpp  webview_windows.hpp
flatpak/: manifest.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/js/: ipc.js
frontend/src/: App.css  App.tsx  main.tsx
mac/: Info.plist  deploy_mac.sh
qt-app/: CMakeLists.txt  embedded_assets.cpp  http_server.hpp  incbin.h  main.cpp
qt-app/www/: index.html  main.js
scripts/: generate_embedded_assets.py
windows/: deskbreeze_installer.nsi
